--- a/lang/english.lng
+++ b/lang/english.lng
@@ -59,14 +59,26 @@ STR_NAME_PASSENGER_12	:12 Series Passenger Coach
 STR_NAME_PASSENGER_24	:24 Series Passenger Coach
 STR_NAME_PASSENGER_50	:50 Series Passenger Coach
 
+STR_NAME_SLEEPER_10		:10 Series Sleeper Coach
+
 STR_REFIT_PAX_OHN25		: {SILVER}OHANE 25{BLACK} Sleeper Coach
 STR_REFIT_PAX_ORN24		: {SILVER}ORONE 24{BLACK} Sleeper Coach
 STR_REFIT_PAX_OHNF25	: {SILVER}OHANEFU 25{BLACK} Lounge Coach
 STR_REFIT_PAX_KN24		: {SILVER}KANI 24{BLACK} Generator Van
 
+STR_REFIT_PAX_ORN10_BROWN		: {SILVER}ORONE 10{BLACK} II. Class Sleeper Coach (Brown)
+STR_REFIT_PAX_OHN17_BROWN		: {SILVER}OHANE 17{BLACK} II. Class Sleeper Coach (Brown)
+STR_REFIT_PAX_ORN10_BROWN_BLUE	: {SILVER}ORONE 10{BLACK} I. Class Sleeper Coach (Brown/Blue)
+STR_REFIT_PAX_OHN17_BROWN_BLUE	: {SILVER}OHANE 17{BLACK} I. Class Sleeper Coach (Brown/Blue)
+STR_REFIT_PAX_ORN10_BROWN_GREEN	: {SILVER}ORONE 10{BLACK} I. Class Sleeper Coach (Brown/Green)
+STR_REFIT_PAX_OHN17_BROWN_GREEN	: {SILVER}OHANE 17{BLACK} I. Class Sleeper Coach (Brown/Green)
+STR_REFIT_PAX_ORN10_BLUE		: {SILVER}ORONE 10{BLACK} Standard Sleeper Coach (Blue)
+STR_REFIT_PAX_OHN17_BLUE		: {SILVER}OHANE 17{BLACK} Standard Sleeper Coach (Blue)
+STR_REFIT_PAX_ORN10_BLUE_GREEN	: {SILVER}ORONE 10{BLACK} Green Sleeper Coach (Blue/Green)
+STR_REFIT_PAX_OHN17_BLUE_GREEN	: {SILVER}OHANE 17{BLACK} Green Sleeper Coach (Blue/Green)
 
 
-STR_NAME_OYU_10		:OYU 10 Mail Van
+STR_NAME_OYU_10			:OYU 10 Mail Van
 STR_NAME_MAIL_15		:SUYU 15 Mail Van
 STR_NAME_MAIL_50		:MANI 50 Express Van
 STR_NAME_MAIL_44		:MANI 44 Express Van
@@ -142,6 +154,8 @@ STR_NAME_YO_8000		:YO 8000 Brake Van
 
 
 STR_REFIT_YEARDEP	: {GREEN}Year-Dependent{BLACK}
+STR_REFIT_AUTOYEAR	: {GREEN}Random, Auto-Update{BLACK}
+STR_REFIT_RANDYEAR	: {GREEN}Random, Year-Dependent{BLACK}
 STR_REFIT_CC		: {GREEN}Company Colour{BLACK}
 STR_REFIT_RANDOM	: {GREEN}Random{BLACK}
 STR_REFIT_AUTOFORM	: {GREEN}Auto-Formation{BLACK}
@@ -153,6 +167,9 @@ STR_REFIT_RED_NEW	    : {WHITE}JNR{BLACK} Red (New Shape)
 STR_REFIT_CC_OLD		: {GREEN}Company Colour{BLACK} (Old Shape)
 STR_REFIT_CC_NEW		: {GREEN}Company Colour{BLACK} (New Shape)
 STR_REFIT_CC_PROTOTYPE	: {GREEN}Company Colour{BLACK} (Prototype)
+
+STR_REFIT_YEARDEP_1ST	: 1. Class {GREEN}(Year-Dependent){BLACK}
+STR_REFIT_YEARDEP_2ND	: 2. Class {GREEN}(Year-Dependent){BLACK}
 
 STR_REFIT_FRANDOM	:, Random
 STR_REFIT_FBROWN	:, Brown
