--- a/lang/english.lng
+++ b/lang/english.lng
@@ -61,6 +61,22 @@ STR_NAME_PASSENGER_50	:50 Series Passenger Coach
 
 STR_NAME_SLEEPER_10		:10 Series Sleeper Coach
 
+
+STR_REFIT_PAX_FKI5670_HCC			: {SILVER}FUKOI 5670{BLACK} Clerestory Coach (Yellow)
+STR_REFIT_PAX_FKH7925_HCC			: {SILVER}FUKOHA 7925{BLACK} Flat Roof Coach (Yellow)
+STR_REFIT_PAXMAIL_FKHY_8050_HCC		: {SILVER}FUKOHAYU 8050{BLACK} Combine Coach (Yellow)
+STR_REFIT_PAX_FKI5670_JGR			: {SILVER}FUKOI 5670{BLACK} I. Class Coach (Brown/White)
+STR_REFIT_PAX_FKR5675_JGR			: {SILVER}FUKORO 5675{BLACK} II. Class Coach (Brown/Blue)
+STR_REFIT_PAX_FKH7945_JGR			: {SILVER}FUKOHA 7945{BLACK} III. Class Coach (Brown/Red)
+STR_REFIT_PAX_FKH7925_JGR			: {SILVER}FUKOHA 7925{BLACK} III. Class Flat Roof Coach (Brown/Red)
+STR_REFIT_PAXMAIL_FKHY_8050_JGR		: {SILVER}FUKOHAYU 8050{BLACK} Combine Coach (Brown/Red)
+STR_REFIT_PAX_FKI5670_BROWN			: {SILVER}FUKOI 5670{BLACK} Clerestory Coach (Brown)
+STR_REFIT_PAX_FKH7925_BROWN			: {SILVER}FUKOHA 7925{BLACK} Flat Roof Coach (Brown)
+STR_REFIT_PAXMAIL_FKHY_8050_BROWN	: {SILVER}FUKOHAYU 8050{BLACK} Combine Coach (Brown)
+STR_REFIT_MAIL_KN8890_HCC			: {SILVER}KONI 8890{BLACK} Luggage Van (Yellow)
+STR_REFIT_MAIL_KN8890_JGR			: {SILVER}KONI 8890{BLACK} Luggage Van (Brown)
+
+
 STR_REFIT_PAX_OHN25		: {SILVER}OHANE 25{BLACK} Sleeper Coach
 STR_REFIT_PAX_ORN24		: {SILVER}ORONE 24{BLACK} Sleeper Coach
 STR_REFIT_PAX_OHNF25	: {SILVER}OHANEFU 25{BLACK} Lounge Coach
@@ -76,6 +92,8 @@ STR_REFIT_PAX_ORN10_BLUE		: {SILVER}ORONE 10{BLACK} Standard Sleeper Coach (Blue
 STR_REFIT_PAX_OHN17_BLUE		: {SILVER}OHANE 17{BLACK} Standard Sleeper Coach (Blue)
 STR_REFIT_PAX_ORN10_BLUE_GREEN	: {SILVER}ORONE 10{BLACK} Green Sleeper Coach (Blue/Green)
 STR_REFIT_PAX_OHN17_BLUE_GREEN	: {SILVER}OHANE 17{BLACK} Green Sleeper Coach (Blue/Green)
+
+
 
 
 STR_NAME_OYU_10			:OYU 10 Mail Van
@@ -159,6 +177,11 @@ STR_REFIT_RANDYEAR	: {GREEN}Random, Year-Dependent{BLACK}
 STR_REFIT_CC		: {GREEN}Company Colour{BLACK}
 STR_REFIT_RANDOM	: {GREEN}Random{BLACK}
 STR_REFIT_AUTOFORM	: {GREEN}Auto-Formation{BLACK}
+STR_REFIT_YEARFORM	: {GREEN}Auto-Formation, Year-Dependent{BLACK}
+
+STR_REFIT_AUTOFORM_HCC		: {GREEN}Auto-Formation{BLACK} {WHITE}Hokkaido Coal Company{BLACK} 
+STR_REFIT_AUTOFORM_JGR		: {GREEN}Auto-Formation{BLACK} {WHITE}JGR{BLACK} 
+STR_REFIT_AUTOFORM_BROWN	: {GREEN}Auto-Formation{BLACK} {WHITE}Brown{BLACK} 
 
 STR_REFIT_BROWN_OLD	    : {WHITE}JNR{BLACK} Standard Brown (Old Shape)
 STR_REFIT_BROWN_NEW	    : {WHITE}JNR{BLACK} Standard Brown (New Shape)
