fixed fruit and vegetable refit

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -76,6 +76,18 @@ STR_REFIT_PAXMAIL_FKHY_8050_BROWN	: {SILVER}FUKOHAYU 8050{BLACK} Combine Coach (
 STR_REFIT_MAIL_KN8890_HCC			: {SILVER}KONI 8890{BLACK} Luggage Van (Yellow)
 STR_REFIT_MAIL_KN8890_JGR			: {SILVER}KONI 8890{BLACK} Luggage Van (Brown)
 
+STR_REFIT_PAX_HOHA6810_JGR			: {SILVER}HOHA 6810{BLACK} III. Class Coach (Brown/Red)
+STR_REFIT_PAX_HOHAFU7570_JGR		: {SILVER}HOHAFU 7570{BLACK} III. Class Coach with Conductor's Room (Brown/Red)
+STR_REFIT_PAX_HORO5535_JGR			: {SILVER}HORO 5535{BLACK} II. Class Coach (Brown/Blue)
+STR_REFIT_PAX_HOROFU5615_JGR		: {SILVER}HOROFU 5615{BLACK} II. Class Coach with Conductor's Room (Brown/Blue)
+STR_REFIT_PAX_HOYA5100_JGR			: {SILVER}HOYA 5100{BLACK} I. Class Coach (Brown/White)
+STR_REFIT_PAX_INERO5135_JGR			: {SILVER}INERO 5135{BLACK} II. Class Sleeper (Brown/Blue)
+STR_REFIT_PAX_INAI5035_JGR			: {SILVER}INAI 5035{BLACK} I. Class Sleeper (Brown/White)
+STR_REFIT_PAX_HOSHI5065_JGR			: {SILVER}HOSHI 5065{BLACK} Dining Car (Brown)
+STR_REFIT_PAXMAIL_NAHANI8430_JGR			: {SILVER}NAHANO 8430{BLACK} III. Class Combine Coach (Brown/Red)
+STR_REFIT_PAXMAIL_NAHANI8430_JGR_FLIP		: {SILVER}NAHANO 8430{BLACK} III. Class Combine Coach, Flipped (Brown/Red)
+STR_REFIT_MAIL_HONI8900_JGR			: {SILVER}HONI 8900{BLACK} Luggage Van (Brown)
+STR_REFIT_MAIL_HOYUNI8725_JGR		: {SILVER}HOYUNI 8725{BLACK} Mail Van (Brown)
 
 STR_REFIT_PAX_OHN25		: {SILVER}OHANE 25{BLACK} Sleeper Coach
 STR_REFIT_PAX_ORN24		: {SILVER}ORONE 24{BLACK} Sleeper Coach
@@ -92,8 +104,6 @@ STR_REFIT_PAX_ORN10_BLUE		: {SILVER}ORONE 10{BLACK} Standard Sleeper Coach (Blue
 STR_REFIT_PAX_OHN17_BLUE		: {SILVER}OHANE 17{BLACK} Standard Sleeper Coach (Blue)
 STR_REFIT_PAX_ORN10_BLUE_GREEN	: {SILVER}ORONE 10{BLACK} Green Sleeper Coach (Blue/Green)
 STR_REFIT_PAX_OHN17_BLUE_GREEN	: {SILVER}OHANE 17{BLACK} Green Sleeper Coach (Blue/Green)
-
-
 
 
 STR_NAME_OYU_10			:OYU 10 Mail Van
@@ -182,6 +192,10 @@ STR_REFIT_YEARFORM	: {GREEN}Auto-Formation, Year-Dependent{BLACK}
 STR_REFIT_AUTOFORM_HCC		: {GREEN}Auto-Formation{BLACK} {WHITE}Hokkaido Coal Company{BLACK} 
 STR_REFIT_AUTOFORM_JGR		: {GREEN}Auto-Formation{BLACK} {WHITE}JGR{BLACK} 
 STR_REFIT_AUTOFORM_BROWN	: {GREEN}Auto-Formation{BLACK} {WHITE}Brown{BLACK} 
+
+STR_REFIT_AUTOFORM_LOCAL	: {GREEN}Auto-Formation{BLACK} Local Train
+STR_REFIT_AUTOFORM_EXPRESS	: {GREEN}Auto-Formation{BLACK} Limited Express
+STR_REFIT_AUTOFORM_SLEEPER	: {GREEN}Auto-Formation{BLACK} Long-Distance
 
 STR_REFIT_BROWN_OLD	    : {WHITE}JNR{BLACK} Standard Brown (Old Shape)
 STR_REFIT_BROWN_NEW	    : {WHITE}JNR{BLACK} Standard Brown (New Shape)
