TOKI 15000 and 25000, WAMU fix

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -158,6 +158,8 @@ STR_NAME_TOMU_1			:TOMU 1 Open Wagon
 STR_NAME_TORA_5000		:TORA 5000 Open Wagon
 STR_NAME_TORA_90000		:TORA 90000 Open Wagon
 STR_NAME_TOKI_900		:TOKI 900 Open Wagon
+STR_NAME_TOKI_15000		:TOKI 15000 Open Wagon
+STR_NAME_TOKI_25000		:TOKI 25000 Open Wagon
 
 STR_NAME_SE_1			:SE 1 Hopper
 STR_NAME_SEKI_1			:SEKI 1 / Otese 9500 Hopper
