wamu and waki rework

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -140,6 +140,7 @@ STR_NAME_WAKI_5000		:WAKI 5000 Box Van
 STR_NAME_WAKI_10000		:WAKI 10000 Box Van
 STR_NAME_WAMU_50000		:WAMU 50000 Box Van
 STR_NAME_WAMU_80000		:WAMU 80000 Box Van
+STR_NAME_WAMU_480000	:WAMU 480000 Bulk Wagon
 STR_NAME_KA_1			:KA 1 Livestock Van
 STR_NAME_RE_1			:RE 1 Refrigerated Van
 STR_NAME_RESA_10000		:RESA 10000 Refrigerated Van
@@ -156,7 +157,7 @@ STR_NAME_ROADRAILER		:WA 100 Dual Mode Transport
 STR_NAME_TO_1			:TO 1 Open Wagon
 STR_NAME_TOMU_1			:TOMU 1 Open Wagon
 STR_NAME_TORA_5000		:TORA 5000 Open Wagon
-STR_NAME_TORA_90000		:TORA 90000 Open Wagon
+STR_NAME_TORA_90000		:TORA 90000 Bulk Wagon
 STR_NAME_TOKI_900		:TOKI 900 Open Wagon
 STR_NAME_TOKI_15000		:TOKI 15000 Open Wagon
 STR_NAME_TOKI_25000		:TOKI 25000 Open Wagon
