--- a/lang/english.lng
+++ b/lang/english.lng
@@ -218,6 +218,7 @@ STR_REFIT_YEARDEP_2ND	: 2. Class {GREEN}(Year-Dependent){BLACK}
 STR_REFIT_FRANDOM	:, Random
 STR_REFIT_FBROWN	:, Brown
 STR_REFIT_FBLACK	:, Black
+STR_REFIT_FSILVER	:, Silver
 STR_REFIT_FGREEN	:, Green
 STR_REFIT_FBLUE		:, Blue
 STR_REFIT_FSTRIPE	:, Stripe
