tanker update part 2

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -183,7 +183,8 @@ STR_NAME_TASA_500		:TASA 500 / Fua 27000 Tanker
 STR_NAME_TAMU_500		:TAMU 500 Tanker
 STR_NAME_TAKI_100		:TAKI 100 Oil Tanker
 STR_NAME_TAKI_3000		:TAKI 3000 Tanker
-STR_NAME_TAKI_5700		:TAKI 5700 Gas Tanker
+STR_NAME_TASA_5700		:TASA 5700 Gas Tanker
+STR_NAME_TAKI_25000		:TAKI 25000 Gas Tanker
 STR_NAME_TAKI_5450		:TAKI 5450 Chemical Tanker
 STR_NAME_TAKI_9900		:TAKI 9900 Fuel Tanker
 STR_NAME_TAKI_50000		:TAKI 50000 Oil Tanker
@@ -232,6 +233,7 @@ STR_REFIT_FBLACK	:, Black
 STR_REFIT_FSILVER	:, Silver
 STR_REFIT_FGREEN	:, Green
 STR_REFIT_FBLUE		:, Blue
+STR_REFIT_FYELLOW	:, Yellow
 STR_REFIT_FSTRIPE	:, Stripe
 STR_REFIT_FOPEN		:, Open
 STR_REFIT_FCOVER	:, Covered
