--- a/lang/english.lng
+++ b/lang/english.lng
@@ -147,7 +147,9 @@ STR_NAME_WAMU_50000		:WAMU 50000 Box Van
 STR_NAME_WAMU_80000		:WAMU 80000 Box Van
 STR_NAME_WAMU_480000	:WAMU 480000 Bulk Wagon
 STR_NAME_KA_1			:KA 1 Livestock Van
+
 STR_NAME_RE_1			:RE 1 Refrigerated Van
+STR_NAME_RE_2500		:RE 2500 Refrigerated Van
 STR_NAME_RESA_10000		:RESA 10000 Refrigerated Van
 STR_NAME_REMU_5000		:REMU 5000 Refrigerated Van
 
