--- a/lang/english.lng
+++ b/lang/english.lng
@@ -158,7 +158,9 @@ STR_NAME_KU_5000		:KU 5000 Car Transporter
 STR_NAME_KOKI_71		:KOKI 71 Car Rack
 STR_NAME_KOKI_5500		:KOKI 5500 Container Carrier
 STR_NAME_KOKI_10000		:KOKI 10000 Container Carrier
-STR_NAME_CONTAINER		:KOKI 100 Container Carrier
+STR_NAME_KOKI_50000		:KOKI 50000 Container Carrier
+STR_NAME_KOKI_100		:KOKI 100 Container Carrier
+STR_NAME_CONTAINER		:DEPRECATED Container Carrier
 STR_NAME_ROADRAILER		:WA 100 Dual Mode Transport
 
 STR_NAME_TO_1			:TO 1 Open Wagon
