24 series recode and hopper improvements

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -93,10 +93,7 @@ STR_REFIT_PAXMAIL_NAHANI8430_JGR_FLIP		: {SILVER}NAHANO 8430{BLACK} III. Class C
 STR_REFIT_MAIL_HONI8900_JGR			: {SILVER}HONI 8900{BLACK} Luggage Van (Brown)
 STR_REFIT_MAIL_HOYUNI8725_JGR		: {SILVER}HOYUNI 8725{BLACK} Mail Van (Brown)
 
-STR_REFIT_PAX_OHN25		: {SILVER}OHANE 25{BLACK} Sleeper Coach
-STR_REFIT_PAX_ORN24		: {SILVER}ORONE 24{BLACK} Sleeper Coach
-STR_REFIT_PAX_OHNF25	: {SILVER}OHANEFU 25{BLACK} Lounge Coach
-STR_REFIT_PAX_KN24		: {SILVER}KANI 24{BLACK} Generator Van
+
 
 STR_REFIT_PAX_ORN10_BROWN		: {SILVER}ORONE 10{BLACK} II. Class Sleeper Coach (Brown)
 STR_REFIT_PAX_OHN17_BROWN		: {SILVER}OHANE 17{BLACK} II. Class Sleeper Coach (Brown)
@@ -108,6 +105,15 @@ STR_REFIT_PAX_ORN10_BLUE		: {SILVER}ORONE 10{BLACK} Standard Sleeper Coach (Blue
 STR_REFIT_PAX_OHN17_BLUE		: {SILVER}OHANE 17{BLACK} Standard Sleeper Coach (Blue)
 STR_REFIT_PAX_ORN10_BLUE_GREEN	: {SILVER}ORONE 10{BLACK} Green Sleeper Coach (Blue/Green)
 STR_REFIT_PAX_OHN17_BLUE_GREEN	: {SILVER}OHANE 17{BLACK} Green Sleeper Coach (Blue/Green)
+
+STR_REFIT_PAX_OHNF25	: {SILVER}OHANEFU 25{BLACK} II. Class Sleeper Coach with Conductor's Room
+STR_REFIT_PAX_OHNF24	: {SILVER}OHANEFU 24{BLACK} II. Class Sleeper Coach with Conductor's Room
+STR_REFIT_PAX_OHN25		: {SILVER}OHANE 25{BLACK} II. Class Sleeper Coach
+STR_REFIT_PAX_OHN24		: {SILVER}OHANE 24{BLACK} II. Class Sleeper Coach
+STR_REFIT_PAX_ORN25		: {SILVER}ORONE 25{BLACK} I. Class Sleeper Coach
+STR_REFIT_PAX_ORN24		: {SILVER}ORONE 24{BLACK} I. Class Sleeper Coach
+STR_REFIT_PAX_OS24		: {SILVER}OSHI 24{BLACK} Dining Car
+STR_REFIT_PAX_KN24		: {SILVER}KANI 24{BLACK} Generator Van
 
 
 STR_NAME_OYU_10			:OYU 10 Mail Van
@@ -219,7 +225,7 @@ STR_REFIT_AUTOFORM_BROWN	: {GREEN}Auto-Formation{BLACK} {WHITE}Brown{BLACK}
 
 STR_REFIT_AUTOFORM_LOCAL	: {GREEN}Auto-Formation{BLACK} Local Train
 STR_REFIT_AUTOFORM_EXPRESS	: {GREEN}Auto-Formation{BLACK} Limited Express
-STR_REFIT_AUTOFORM_SLEEPER	: {GREEN}Auto-Formation{BLACK} Long-Distance
+STR_REFIT_AUTOFORM_SLEEPER	: {GREEN}Auto-Formation{BLACK} Night Train
 
 STR_REFIT_BROWN_OLD	    : {WHITE}JNR{BLACK} Standard Brown (Old Shape)
 STR_REFIT_BROWN_NEW	    : {WHITE}JNR{BLACK} Standard Brown (New Shape)
