Flat wagon update part 2

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -206,7 +206,10 @@ STR_NAME_TAKI_43000		:TAKI 43000 Tanker
 STR_NAME_TAKI_1000		:TAKI 1000 Tanker
 
 STR_NAME_CHISA_1		:CHISA 1 Flat Wagon
+STR_NAME_CHISA_1600		:CHISA 1600 Flat Wagon
+STR_NAME_CHI_1000		:CHI 1000 Flat Wagon
 STR_NAME_CHIKI_1500		:CHIKI 1500 Flat Wagon
+STR_NAME_CHIKI_7000		:CHIKI 7000 Flat Wagon
 
 STR_NAME_YO_1			:YO 1 Brake Van
 STR_NAME_YO_5000		:YO 5000 Brake Van
