--- a/lang/english.lng
+++ b/lang/english.lng
@@ -2,7 +2,7 @@
 
 lang: 7F
 
-STR_GRF_NAME :JP+ Engines & Wagons v0.10.9 modular
+STR_GRF_NAME :JP+ Engines & Wagons v0.10.9 
 STR_GRF_DESCRIPTION :An addon for Japan Set Trains, focused on locomotives and wagons. Includes many new locos and livery refits. Drawn by Emperor Jake, Voyager One, Doorslammer, wicket-303, *SaYa*, Azusa257, andythenorth and the JapanSet Team. Coded by Emperor Jake, 2022 GPLv2+.
 
 STR_PARAM_NAME_BASECOSTMODBUY	:Purchase costs
@@ -55,6 +55,8 @@ STR_NAME_DEKI_400	:DeKi 400 (electric)
 STR_NAME_SEIBU_E851	:E851 (electric)
 STR_NAME_SEIBU_E31	:E31 (electric)
 
+STR_NAME_PAX_OHA31			:OHA 31 Series Passenger Coach
+STR_NAME_PAX_SUHA32			:SUHA 32 Series Passenger Coach
 
 STR_NAME_PASSENGER_12	:12 Series Passenger Coach
 STR_NAME_PASSENGER_24	:24 Series Passenger Coach
@@ -94,6 +96,11 @@ STR_REFIT_PAXMAIL_NAHANI8430_JGR_FLIP		: {SILVER}NAHANO 8430{BLACK} III. Class C
 STR_REFIT_MAIL_HONI8900_JGR			: {SILVER}HONI 8900{BLACK} Luggage Van (Brown)
 STR_REFIT_MAIL_HOYUNI8725_JGR		: {SILVER}HOYUNI 8725{BLACK} Mail Van (Brown)
 
+STR_REFIT_PAX_3CLASS			: III. Class Coach 
+STR_REFIT_PAX_2CLASS			: II. Class Coach 
+STR_REFIT_PAX_1CLASS			: I. Class Coach
+STR_REFIT_PAX_DINER				: Dining Coach
+STR_REFIT_PAX_COMBINE			: III. Class Combine Coach 
 
 
 STR_REFIT_PAX_ORN10_BROWN		: {SILVER}ORONE 10{BLACK} II. Class Sleeper Coach (Brown)
@@ -116,13 +123,19 @@ STR_REFIT_PAX_ORN24		: {SILVER}ORONE 24{BLACK} I. Class Sleeper Coach
 STR_REFIT_PAX_OS24		: {SILVER}OSHI 24{BLACK} Dining Car
 STR_REFIT_PAX_KN24		: {SILVER}KANI 24{BLACK} Generator Van
 
-
+STR_NAME_MAIL_MANI_31	:MANI 31 Express Van
 STR_NAME_OYU_10			:OYU 10 Mail Van
 STR_NAME_MAIL_15		:SUYU 15 Mail Van
 STR_NAME_MAIL_50		:MANI 50 Express Van
 STR_NAME_MAIL_44		:MANI 44 Express Van
 STR_NAME_MAIL_30		:MANI 30 Armoured Van
 STR_NAME_MAIL_8000		:SUNI 40 / SUYU 44 / WAKI 8000 Express Van
+
+
+STR_REFIT_MANI_31		: {SILVER}MANI 31{BLACK} Luggage Van
+STR_REFIT_SUHANE_31_JGR	: {SILVER}SUHANE 31{BLACK} Combine Coach (Brown/Red)
+STR_REFIT_SUHANE_31_JNR	: {SILVER}SUHANE 31{BLACK} Combine Coach (Brown)
+
 
 STR_REFIT_SUNI_40		: {SILVER}SUNI 40{BLACK} Luggage Van
 STR_REFIT_SUYU_44		: {SILVER}SUYU 44{BLACK} Mail Van
