suha32 refit, modular strings
modular strings

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -98,26 +98,56 @@ STR_REFIT_PAXMAIL_NAHANI8430_JGR_FLIP		: {SILVER}NAHANO 8430{BLACK} III. Class C
 STR_REFIT_MAIL_HONI8900_JGR			: {SILVER}HONI 8900{BLACK} Luggage Van (Brown)
 STR_REFIT_MAIL_HOYUNI8725_JGR		: {SILVER}HOYUNI 8725{BLACK} Mail Van (Brown)
 
+STR_CONCAT_2	:{STRING} {STRING}
+STR_CONCAT_3	:{STRING} {STRING} {STRING}
 
-STR_REFIT_PAX_3CLASS			: III. Class Coach 
-STR_REFIT_PAX_2CLASS			: II. Class Coach 
-STR_REFIT_PAX_1CLASS			: I. Class Coach
-STR_REFIT_PAX_DINER				: Dining Coach
-STR_REFIT_PAX_COMBINE			: III. Class Combine Coach 
+################
+#CLASS SUFFIXES#
+################
+STR_SUFFIX_PAX_3CLASS			: III. Class Coach 
+STR_SUFFIX_PAX_2CLASS			: II. Class Coach 
+STR_SUFFIX_PAX_1CLASS			: I. Class Coach
+STR_SUFFIX_PAX_12CLASS			: I./II. Class Coach
+
+STR_SUFFIX_OBS_1CLASS			: I. Class Observation Coach
+
+STR_SUFFIX_DINER				: Dining Coach
+STR_SUFFIX_DINER_1CLASS			: I. Class/Dining Coach
+STR_SUFFIX_COMBINE_3CLASS		: III. Class Combine Coach 
+
+STR_SUFFIX_SLEEPER_2CLASS		: II. Class Sleeper
+STR_SUFFIX_SLEEPER_1CLASS		: I. Class Sleeper
+STR_SUFFIX_SLEEPER_STANDARD		: Standard Sleeper
+STR_SUFFIX_SLEEPER_GREEN		: Green Car Sleeper
+
+
+#################
+#COLOUR SUFFIXES#
+#################
+STR_SUFFIX_BROWN			: (Brown)
+STR_SUFFIX_BROWN_BLUE		: (Brown/Blue)
+STR_SUFFIX_BROWN_RED		: (Brown/Red)
+STR_SUFFIX_BROWN_CREAM		: (Brown/Cream)
+STR_SUFFIX_BROWN_GREEN		: (Brown/Green)
+STR_SUFFIX_BLUE				: (Blue)
+STR_SUFFIX_BLUE_GREEN		: (Blue/Green)
 
 
 
+STR_REFIT_PAX_SUHA32		: {SILVER}SUHA 32{BLACK}
+STR_REFIT_PAX_MARONE37		: {SILVER}MARONE 37{BLACK}
+STR_REFIT_PAX_SURO30		: {SILVER}SURO 30{BLACK}
+STR_REFIT_PAX_MAINE37		: {SILVER}MAINE 37{BLACK}
+STR_REFIT_PAX_SUSHI37		: {SILVER}SUSHI 37{BLACK}
+STR_REFIT_PAX_MAISHI37		: {SILVER}MAISHI 37{BLACK}
+STR_REFIT_PAX_SUHANE31		: {SILVER}SUHANE 31{BLACK}
+STR_REFIT_PAX_MAINEFU37		: {SILVER}MAINEFU 37{BLACK}
+STR_REFIT_PAX_MAIRONEFU37	: {SILVER}MAIRONEFU 37{BLACK}
+STR_REFIT_PAX_SITE37		: {SILVER}SITE 37{BLACK}
 
-STR_REFIT_PAX_ORN10_BROWN		: {SILVER}ORONE 10{BLACK} II. Class Sleeper Coach (Brown)
-STR_REFIT_PAX_OHN17_BROWN		: {SILVER}OHANE 17{BLACK} II. Class Sleeper Coach (Brown)
-STR_REFIT_PAX_ORN10_BROWN_BLUE	: {SILVER}ORONE 10{BLACK} I. Class Sleeper Coach (Brown/Blue)
-STR_REFIT_PAX_OHN17_BROWN_BLUE	: {SILVER}OHANE 17{BLACK} I. Class Sleeper Coach (Brown/Blue)
-STR_REFIT_PAX_ORN10_BROWN_GREEN	: {SILVER}ORONE 10{BLACK} I. Class Sleeper Coach (Brown/Green)
-STR_REFIT_PAX_OHN17_BROWN_GREEN	: {SILVER}OHANE 17{BLACK} I. Class Sleeper Coach (Brown/Green)
-STR_REFIT_PAX_ORN10_BLUE		: {SILVER}ORONE 10{BLACK} Standard Sleeper Coach (Blue)
-STR_REFIT_PAX_OHN17_BLUE		: {SILVER}OHANE 17{BLACK} Standard Sleeper Coach (Blue)
-STR_REFIT_PAX_ORN10_BLUE_GREEN	: {SILVER}ORONE 10{BLACK} Green Sleeper Coach (Blue/Green)
-STR_REFIT_PAX_OHN17_BLUE_GREEN	: {SILVER}OHANE 17{BLACK} Green Sleeper Coach (Blue/Green)
+STR_REFIT_PAX_ORN10		: {SILVER}ORONE 10{BLACK}
+STR_REFIT_PAX_OHN17		: {SILVER}OHANE 17{BLACK}
+
 
 STR_REFIT_PAX_OHNF25	: {SILVER}OHANEFU 25{BLACK} II. Class Sleeper Coach with Conductor's Room
 STR_REFIT_PAX_OHNF24	: {SILVER}OHANEFU 24{BLACK} II. Class Sleeper Coach with Conductor's Room
