--- a/lang/english.lng
+++ b/lang/english.lng
@@ -100,6 +100,7 @@ STR_REFIT_MAIL_HOYUNI8725_JGR		: {SILVER}HOYUNI 8725{BLACK} Mail Van (Brown)
 
 STR_CONCAT_2	:{STRING} {STRING}
 STR_CONCAT_3	:{STRING} {STRING} {STRING}
+STR_CONCAT_4	:{STRING} {STRING} {STRING} {STRING}
 
 ################
 #CLASS SUFFIXES#
@@ -109,14 +110,18 @@ STR_SUFFIX_PAX_2CLASS			: II. Class Coach
 STR_SUFFIX_PAX_1CLASS			: I. Class Coach
 STR_SUFFIX_PAX_12CLASS			: I./II. Class Coach
 
+STR_SUFFIX_CONDUCTOR			: with Conductor's Room
+
 STR_SUFFIX_OBS_1CLASS			: I. Class Observation Coach
 
 STR_SUFFIX_DINER				: Dining Coach
 STR_SUFFIX_DINER_1CLASS			: I. Class/Dining Coach
 STR_SUFFIX_COMBINE_3CLASS		: III. Class Combine Coach 
 
+STR_SUFFIX_SLEEPER_3CLASS		: III. Class Sleeper
 STR_SUFFIX_SLEEPER_2CLASS		: II. Class Sleeper
 STR_SUFFIX_SLEEPER_1CLASS		: I. Class Sleeper
+STR_SUFFIX_SLEEPER_12CLASS		: I./II. Class Sleeper
 STR_SUFFIX_SLEEPER_STANDARD		: Standard Sleeper
 STR_SUFFIX_SLEEPER_GREEN		: Green Car Sleeper
 
@@ -131,7 +136,7 @@ STR_SUFFIX_BROWN_CREAM		: (Brown/Cream)
 STR_SUFFIX_BROWN_GREEN		: (Brown/Green)
 STR_SUFFIX_BLUE				: (Blue)
 STR_SUFFIX_BLUE_GREEN		: (Blue/Green)
-
+STR_SUFFIX_BLUE_WHITE		: (Blue/White)
 
 
 STR_REFIT_PAX_SUHA32		: {SILVER}SUHA 32{BLACK}
@@ -145,8 +150,15 @@ STR_REFIT_PAX_MAINEFU37		: {SILVER}MAINEFU 37{BLACK}
 STR_REFIT_PAX_MAIRONEFU37	: {SILVER}MAIRONEFU 37{BLACK}
 STR_REFIT_PAX_SITE37		: {SILVER}SITE 37{BLACK}
 
+
+STR_REFIT_PAX_NR10		: {SILVER}NARO 10{BLACK}
 STR_REFIT_PAX_ORN10		: {SILVER}ORONE 10{BLACK}
-STR_REFIT_PAX_OHN17		: {SILVER}OHANE 17{BLACK}
+STR_REFIT_PAX_OHN17		: {SILVER}OHANE 10{BLACK}
+STR_REFIT_PAX_NRHN10	: {SILVER}NAROHANE 10{BLACK}
+STR_REFIT_PAX_NH10		: {SILVER}NAHA 10{BLACK}
+STR_REFIT_PAX_NHF10		: {SILVER}NAHAFU 10{BLACK}
+STR_REFIT_PAX_NHN10		: {SILVER}NAHANE 10{BLACK}
+STR_REFIT_PAX_OS17		: {SILVER}OSHI 17{BLACK}
 
 
 STR_REFIT_PAX_OHNF25	: {SILVER}OHANEFU 25{BLACK} II. Class Sleeper Coach with Conductor's Room
