--- a/lang/english.lng
+++ b/lang/english.lng
@@ -138,7 +138,9 @@ STR_SUFFIX_BLUE				: (Blue)
 STR_SUFFIX_BLUE_GREEN		: (Blue/Green)
 STR_SUFFIX_BLUE_WHITE		: (Blue/White)
 
-
+#########
+#SUHA 32#
+#########
 STR_REFIT_PAX_SUHA32		: {SILVER}SUHA 32{BLACK}
 STR_REFIT_PAX_MARONE37		: {SILVER}MARONE 37{BLACK}
 STR_REFIT_PAX_SURO30		: {SILVER}SURO 30{BLACK}
@@ -150,10 +152,12 @@ STR_REFIT_PAX_MAINEFU37		: {SILVER}MAINEFU 37{BLACK}
 STR_REFIT_PAX_MAIRONEFU37	: {SILVER}MAIRONEFU 37{BLACK}
 STR_REFIT_PAX_SITE37		: {SILVER}SITE 37{BLACK}
 
-
+###########
+#10 SERIES#
+###########
 STR_REFIT_PAX_NR10		: {SILVER}NARO 10{BLACK}
 STR_REFIT_PAX_ORN10		: {SILVER}ORONE 10{BLACK}
-STR_REFIT_PAX_OHN17		: {SILVER}OHANE 10{BLACK}
+STR_REFIT_PAX_OHN17		: {SILVER}OHANE 17{BLACK}
 STR_REFIT_PAX_NRHN10	: {SILVER}NAROHANE 10{BLACK}
 STR_REFIT_PAX_NH10		: {SILVER}NAHA 10{BLACK}
 STR_REFIT_PAX_NHF10		: {SILVER}NAHAFU 10{BLACK}
@@ -170,7 +174,7 @@ STR_REFIT_PAX_ORN24		: {SILVER}ORONE 24{BLACK} I. Class Sleeper Coach
 STR_REFIT_PAX_OS24		: {SILVER}OSHI 24{BLACK} Dining Car
 STR_REFIT_PAX_KN24		: {SILVER}KANI 24{BLACK} Generator Van
 
-STR_NAME_MAIL_MANI_31	:MANI 31 Express Van
+STR_NAME_MAIL_MANI_31	:MAYU 33 Mail Van
 STR_NAME_OYU_10			:OYU 10 Mail Van
 STR_NAME_MAIL_15		:SUYU 15 Mail Van
 STR_NAME_MAIL_50		:MANI 50 Express Van
@@ -178,7 +182,7 @@ STR_NAME_MAIL_44		:MANI 44 Express Van
 STR_NAME_MAIL_30		:MANI 30 Armoured Van
 STR_NAME_MAIL_8000		:SUNI 40 / SUYU 44 / WAKI 8000 Express Van
 
-
+STR_REFIT_MAYU_33		: {SILVER}MAYU 33{BLACK} Mail Van
 STR_REFIT_MANI_31		: {SILVER}MANI 31{BLACK} Luggage Van
 STR_REFIT_SUHANE_31_JGR	: {SILVER}SUHANE 31{BLACK} Combine Coach (Brown/Red)
 STR_REFIT_SUHANE_31_JNR	: {SILVER}SUHANE 31{BLACK} Combine Coach (Brown)
