Tokaido express coaches

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -59,7 +59,9 @@ STR_NAME_PAX_FUKOHA7945	:FUKOHA 7945 Passenger Coach
 STR_NAME_PAX_HOHA6810	:HOHA 6810 Passenger Coach
 STR_NAME_PAX_OHA31		:OHA 31 Passenger Coach
 STR_NAME_PAX_SUHA32		:SUHA 32 Passenger Coach
-STR_NAME_SLEEPER_10		:10 Series Sleeper Coach
+STR_NAME_PAX_SUHA43		:SUHA 43 Passenger Coach
+STR_NAME_PAX_SUHA44		:SUHA 44 Passenger Coach {GOLD}"Tokaidō"{BLACK}
+STR_NAME_SLEEPER_10		:10 Series Passenger Coach
 STR_NAME_PASSENGER_12	:12 Series Passenger Coach
 STR_NAME_PASSENGER_24	:24 Series Passenger Coach
 STR_NAME_PASSENGER_50	:50 Series Passenger Coach
@@ -122,6 +124,7 @@ STR_SUFFIX_SLEEPER_3CLASS		: III. Class Sleeper
 STR_SUFFIX_SLEEPER_2CLASS		: II. Class Sleeper
 STR_SUFFIX_SLEEPER_1CLASS		: I. Class Sleeper
 STR_SUFFIX_SLEEPER_12CLASS		: I./II. Class Sleeper
+STR_SUFFIX_SLEEPER_23CLASS		: II./III. Class Sleeper
 STR_SUFFIX_SLEEPER_STANDARD		: Standard Sleeper
 STR_SUFFIX_SLEEPER_GREEN		: Green Car Sleeper
 
@@ -296,6 +299,9 @@ STR_REFIT_AUTOFORM_BROWN	: {GREEN}Auto-Formation{BLACK} {WHITE}Brown{BLACK}
 STR_REFIT_AUTOFORM_LOCAL	: {GREEN}Auto-Formation{BLACK} Local Train
 STR_REFIT_AUTOFORM_EXPRESS	: {GREEN}Auto-Formation{BLACK} Limited Express
 STR_REFIT_AUTOFORM_SLEEPER	: {GREEN}Auto-Formation{BLACK} Night Train
+
+STR_REFIT_AUTOFORM_TSUBAME	: {GREEN}Auto-Formation{BLACK} {GOLD}"Tsubame"{BLACK}
+STR_REFIT_AUTOFORM_HATO		: {GREEN}Auto-Formation{BLACK} {GOLD}"Hato"{BLACK}
 
 STR_REFIT_BROWN_OLD	    : {WHITE}JNR{BLACK} Standard Brown (Old Shape)
 STR_REFIT_BROWN_NEW	    : {WHITE}JNR{BLACK} Standard Brown (New Shape)
