--- a/lang/english.lng
+++ b/lang/english.lng
@@ -27,6 +27,7 @@ STR_NAME_JGR_7200	:7200 1-C (steam)
 STR_NAME_JGR_860	:860 1-B-1 (steam)
 STR_NAME_JGR_7050	:7050 C-1 (steam)
 
+
 STR_NAME_JNR_DD13	:DD13 (diesel)
 STR_NAME_JNR_DD16	:DD16 (diesel)
 STR_NAME_JNR_DD54	:DD54 (diesel)
@@ -42,6 +43,7 @@ STR_NAME_JNR_ED62	:ED61 / ED62 (electric)
 STR_NAME_JNR_ED70	:ED70 (electric)
 STR_NAME_JNR_ED75	:ED75 / ED79 (electric)
 STR_NAME_JNR_ED76	:ED76 (electric)
+STR_NAME_JGR_EF50	:EF50 (electric)
 STR_NAME_JNR_EF53	:EF53 / EF59 (electric)
 STR_NAME_JNR_EF57	:EF57 (electric)
 STR_NAME_JNR_EH10	:EH10 (electric)
@@ -176,6 +178,14 @@ STR_REFIT_PAX_ORN25		: {SILVER}ORONE 25{BLACK} I. Class Sleeper Coach
 STR_REFIT_PAX_ORN24		: {SILVER}ORONE 24{BLACK} I. Class Sleeper Coach
 STR_REFIT_PAX_OS24		: {SILVER}OSHI 24{BLACK} Dining Car
 STR_REFIT_PAX_KN24		: {SILVER}KANI 24{BLACK} Generator Van
+
+
+
+
+
+
+STR_NAME_MAIL_KONI_8890	:KONI 8890 Luggage Van
+STR_NAME_MAIL_HONI_8900	:HONI 8900 Luggage Van
 
 STR_NAME_MAIL_MANI_31	:MAYU 33 Mail Van
 STR_NAME_OYU_10			:OYU 10 Mail Van
@@ -333,6 +343,7 @@ STR_REFIT_SEIBU		: {WHITE}Seibu Railway{BLACK} Red/Cream
 
 STR_REFIT_JGR		: {WHITE}JGR{BLACK} Brown
 STR_REFIT_JGR_BLACK	: {WHITE}JGR{BLACK} Black
+STR_REFIT_JGR_GREEN	: {WHITE}JGR{BLACK} Green
 
 STR_REFIT_JNR_BROWN	    : {WHITE}JNR{BLACK} Brown
 STR_REFIT_JNR_YELLOW	: {WHITE}JNR{BLACK} Brown/Yellow
