--- a/lang/english.lng
+++ b/lang/english.lng
@@ -33,6 +33,7 @@ STR_NAME_JNR_DD16	:DD16 (diesel)
 STR_NAME_JNR_DD54	:DD54 (diesel)
 STR_NAME_JNR_AB10	:AB10 (battery)
 STR_NAME_JNR_EB10	:EB10 (electric)
+STR_NAME_JNR_EF15	:EF15 (electric)
 STR_NAME_JNR_EF30	:EF30 (electric)
 STR_NAME_JNR_EF60	:EF60 (electric)
 STR_NAME_JNR_EF63	:EF63 (electric)
