suha 43 - still some bugs
still some bugs

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -114,13 +114,13 @@ STR_SUFFIX_PAX_3CLASS			: III. Class Coach
 STR_SUFFIX_PAX_2CLASS			: II. Class Coach 
 STR_SUFFIX_PAX_1CLASS			: I. Class Coach
 STR_SUFFIX_PAX_12CLASS			: I./II. Class Coach
-
+STR_SUFFIX_PAX_GREEN			: Green Car
 STR_SUFFIX_CONDUCTOR			: with Conductor's Room
 
 STR_SUFFIX_OBS_1CLASS			: I. Class Observation Coach
 
-STR_SUFFIX_DINER				: Dining Coach
-STR_SUFFIX_DINER_1CLASS			: I. Class/Dining Coach
+STR_SUFFIX_DINER				: Dining Car
+STR_SUFFIX_DINER_1CLASS			: I. Class/Dining Car
 STR_SUFFIX_COMBINE_3CLASS		: III. Class Combine Coach 
 
 STR_SUFFIX_SLEEPER_3CLASS		: III. Class Sleeper
@@ -130,6 +130,9 @@ STR_SUFFIX_SLEEPER_12CLASS		: I./II. Class Sleeper
 STR_SUFFIX_SLEEPER_23CLASS		: II./III. Class Sleeper
 STR_SUFFIX_SLEEPER_STANDARD		: Standard Sleeper
 STR_SUFFIX_SLEEPER_GREEN		: Green Car Sleeper
+
+STR_SUFFIX_GENERATOR			: Generator Van
+STR_SUFFIX_INSPECTION			: Inspection Car
 
 
 #################
@@ -143,6 +146,7 @@ STR_SUFFIX_BROWN_GREEN		: (Brown/Green)
 STR_SUFFIX_BLUE				: (Blue)
 STR_SUFFIX_BLUE_GREEN		: (Blue/Green)
 STR_SUFFIX_BLUE_WHITE		: (Blue/White)
+STR_SUFFIX_BLUE_YELLOW		: (Blue/Yellow)
 
 #########
 #SUHA 32#
@@ -158,6 +162,23 @@ STR_REFIT_PAX_MAINEFU37		: {SILVER}MAINEFU 37{BLACK}
 STR_REFIT_PAX_MAIRONEFU37	: {SILVER}MAIRONEFU 37{BLACK}
 STR_REFIT_PAX_SITE37		: {SILVER}SITE 37{BLACK}
 
+#########
+#SUHA 43#
+#########
+STR_REFIT_PAX_SUHA43		: {SILVER}SUHA 43{BLACK}
+STR_REFIT_PAX_SUHAFU43		: {SILVER}SUHAFU 43{BLACK}
+STR_REFIT_PAX_SUHA44		: {SILVER}SUHA 44BLACK}
+STR_REFIT_PAX_SUHAFU44		: {SILVER}SUHAFU 44{BLACK}
+STR_REFIT_PAX_SURO51		: {SILVER}SURO 51{BLACK}
+STR_REFIT_PAX_SURO54		: {SILVER}SURO 54{BLACK}
+STR_REFIT_PAX_MASHI35		: {SILVER}MASHI 35{BLACK}
+STR_REFIT_PAX_MAINE40		: {SILVER}MAINE 40{BLACK}
+STR_REFIT_PAX_MARONE40		: {SILVER}MARONE 40{BLACK}
+STR_REFIT_PAX_MARONE41		: {SILVER}MARONE 41{BLACK}
+STR_REFIT_PAX_SUHANI35		: {SILVER}SUHANI 35{BLACK}
+STR_REFIT_PAX_SUYA42		: {SILVER}SUYA 42{BLACK}
+
+
 ###########
 #10 SERIES#
 ###########
@@ -171,6 +192,9 @@ STR_REFIT_PAX_NHN10		: {SILVER}NAHANE 10{BLACK}
 STR_REFIT_PAX_OS17		: {SILVER}OSHI 17{BLACK}
 
 
+###########
+#24 SERIES#to mod
+###########
 STR_REFIT_PAX_OHNF25	: {SILVER}OHANEFU 25{BLACK} II. Class Sleeper Coach with Conductor's Room
 STR_REFIT_PAX_OHNF24	: {SILVER}OHANEFU 24{BLACK} II. Class Sleeper Coach with Conductor's Room
 STR_REFIT_PAX_OHN25		: {SILVER}OHANE 25{BLACK} II. Class Sleeper Coach
