12 and 50 series overhaul and cc

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -148,6 +148,9 @@ STR_SUFFIX_BLUE_GREEN		: (Blue/Green)
 STR_SUFFIX_BLUE_WHITE		: (Blue/White)
 STR_SUFFIX_BLUE_YELLOW		: (Blue/Yellow)
 
+STR_SUFFIX_RED				: (Red)
+STR_SUFFIX_CC				: {GREEN}(Company Coloured){BLACK}
+
 #########
 #SUHA 32#
 #########
@@ -167,7 +170,7 @@ STR_REFIT_PAX_SITE37		: {SILVER}SITE 37{BLACK}
 #########
 STR_REFIT_PAX_SUHA43		: {SILVER}SUHA 43{BLACK}
 STR_REFIT_PAX_SUHAFU43		: {SILVER}SUHAFU 43{BLACK}
-STR_REFIT_PAX_SUHA44		: {SILVER}SUHA 44BLACK}
+STR_REFIT_PAX_SUHA44		: {SILVER}SUHA 44 {BLACK}
 STR_REFIT_PAX_SUHAFU44		: {SILVER}SUHAFU 44{BLACK}
 STR_REFIT_PAX_SURO51		: {SILVER}SURO 51{BLACK}
 STR_REFIT_PAX_SURO54		: {SILVER}SURO 54{BLACK}
@@ -234,7 +237,9 @@ STR_REFIT_WASAFU_8000	: {SILVER}WASAFU 8000{BLACK} Box Van with Conductor's Room
 STR_REFIT_WASAFU_BLUE	: {SILVER}WASAFU 8000{BLACK} Box Van with Conductor's Room (Blue)
 
 
-
+################
+#FREIGHT WAGONS#
+################
 
 STR_NAME_CAR_CARRIER	:Future Car Transporter
 STR_NAME_SUPPLY_CARRIER	:Old Vehicle Flatbed
@@ -319,12 +324,34 @@ STR_NAME_YO_8000		:YO 8000 Brake Van
 
 
 
+
+
+#####################
+#NEW MODULAR STRINGS#
+#####################
+
+
+STR_SUFFIX_AIRCON	:Air Conditioned
+STR_SUFFIX_ORIGINAL	:Original
+STR_SUFFIX_YEARDEP	:{GREEN}Year-Dependent{BLACK}
+STR_SUFFIX_RANDOM	:{GREEN}Random{BLACK}
+
+
+
+
+
+
 STR_REFIT_YEARDEP	: {GREEN}Year-Dependent{BLACK}
-STR_REFIT_AUTOYEAR	: {GREEN}Random, Auto-Update{BLACK}
-STR_REFIT_RANDYEAR	: {GREEN}Random, Year-Dependent{BLACK}
 STR_REFIT_CC		: {GREEN}Company Colour{BLACK}
 STR_REFIT_RANDOM	: {GREEN}Random{BLACK}
 STR_REFIT_AUTOFORM	: {GREEN}Auto-Formation{BLACK}
+
+
+
+STR_REFIT_AUTOYEAR	: {GREEN}Random, Auto-Update{BLACK}
+STR_REFIT_RANDYEAR	: {GREEN}Random, Year-Dependent{BLACK}
+
+
 STR_REFIT_YEARFORM	: {GREEN}Auto-Formation, Year-Dependent{BLACK}
 
 STR_REFIT_AUTOFORM_HCC		: {GREEN}Auto-Formation{BLACK} {WHITE}Hokkaido Coal Company{BLACK} 
