--- a/lang/english.lng
+++ b/lang/english.lng
@@ -58,6 +58,7 @@ STR_NAME_DEKI_400	:DeKi 400 (electric)
 STR_NAME_SEIBU_E851	:E851 (electric)
 STR_NAME_SEIBU_E31	:E31 (electric)
 
+STR_NAME_PAX_HA4995		:HA 4995 Passenger Coach
 STR_NAME_PAX_FUKOHA7945	:FUKOHA 7945 Passenger Coach
 STR_NAME_PAX_HOHA6810	:HOHA 6810 Passenger Coach
 STR_NAME_PAX_OHA31		:OHA 31 Passenger Coach
@@ -72,6 +73,44 @@ STR_NAME_PAX_50_5000	:50-5000 Series Passenger Coach {GOLD}"Rapid Kaikyō"{BLACK
 
 STR_NAME_PAX_26			:E26 Series Sleeper Coach {GOLD}"Cassiopeia"{BLACK}
 STR_NAME_PAX_77			:77-7000 Series Sleeper Coach {GOLD}"Seven Stars"{BLACK}
+
+
+STR_NAME_MAIL_HANI1		:HANI 1 Luggage Van
+STR_NAME_MAIL_KONI_8890	:KONI 8890 Luggage Van
+STR_NAME_MAIL_HONI_8900	:HONI 8900 Luggage Van
+
+STR_NAME_MAIL_MANI_31	:MAYU 33 Mail Van
+STR_NAME_OYU_10			:OYU 10 Mail Van
+STR_NAME_MAIL_15		:SUYU 15 Mail Van
+STR_NAME_MAIL_50		:MANI 50 Express Van
+STR_NAME_MAIL_44		:MANI 44 Express Van
+STR_NAME_MAIL_30		:MANI 30 Armoured Van
+STR_NAME_MAIL_8000		:SUNI 40 / SUYU 44 / WAKI 8000 Express Van
+
+
+
+#################
+#PAXMAIL  REFITS#
+#################
+
+
+STR_REFIT_PAX_HA4995		: {SILVER}HA 4995{BLACK}
+STR_REFIT_PAX_HABU3			: {SILVER}HABU 3{BLACK}
+STR_REFIT_PAX_RO481			: {SILVER}RO 481{BLACK}
+STR_REFIT_MAIL_HANI1		: {SILVER}HANI 1{BLACK}
+
+STR_REFIT_MAYU_33		: {SILVER}MAYU 33{BLACK} Mail Van
+STR_REFIT_MANI_31		: {SILVER}MANI 31{BLACK} Luggage Van
+STR_REFIT_SUHANE_31_JGR	: {SILVER}SUHANE 31{BLACK} Combine Coach (Brown/Red)
+STR_REFIT_SUHANE_31_JNR	: {SILVER}SUHANE 31{BLACK} Combine Coach (Brown)
+
+
+STR_REFIT_SUNI_40		: {SILVER}SUNI 40{BLACK} Luggage Van
+STR_REFIT_SUYU_44		: {SILVER}SUYU 44{BLACK} Mail Van
+STR_REFIT_WAKI_8000		: {SILVER}WAKI 8000{BLACK} Express Box Van
+STR_REFIT_SUNI_41		: {SILVER}SUNI 41{BLACK} Mail Van with Conductor's Room
+STR_REFIT_WASAFU_8000	: {SILVER}WASAFU 8000{BLACK} Box Van with Conductor's Room (Silver)
+STR_REFIT_WASAFU_BLUE	: {SILVER}WASAFU 8000{BLACK} Box Van with Conductor's Room (Blue)
 
 
 
@@ -122,6 +161,7 @@ STR_SUFFIX_OBS_1CLASS			: I. Class Observation Coach
 STR_SUFFIX_DINER				: Dining Car
 STR_SUFFIX_DINER_1CLASS			: I. Class/Dining Car
 STR_SUFFIX_COMBINE_3CLASS		: III. Class Combine Coach 
+STR_SUFFIX_COMFLIP_3CLASS		: III. Class Combine Coach, Flipped
 
 STR_SUFFIX_SLEEPER_3CLASS		: III. Class Sleeper
 STR_SUFFIX_SLEEPER_2CLASS		: II. Class Sleeper
@@ -212,29 +252,6 @@ STR_REFIT_PAX_KN24		: {SILVER}KANI 24{BLACK} Generator Van
 
 
 
-STR_NAME_MAIL_KONI_8890	:KONI 8890 Luggage Van
-STR_NAME_MAIL_HONI_8900	:HONI 8900 Luggage Van
-
-STR_NAME_MAIL_MANI_31	:MAYU 33 Mail Van
-STR_NAME_OYU_10			:OYU 10 Mail Van
-STR_NAME_MAIL_15		:SUYU 15 Mail Van
-STR_NAME_MAIL_50		:MANI 50 Express Van
-STR_NAME_MAIL_44		:MANI 44 Express Van
-STR_NAME_MAIL_30		:MANI 30 Armoured Van
-STR_NAME_MAIL_8000		:SUNI 40 / SUYU 44 / WAKI 8000 Express Van
-
-STR_REFIT_MAYU_33		: {SILVER}MAYU 33{BLACK} Mail Van
-STR_REFIT_MANI_31		: {SILVER}MANI 31{BLACK} Luggage Van
-STR_REFIT_SUHANE_31_JGR	: {SILVER}SUHANE 31{BLACK} Combine Coach (Brown/Red)
-STR_REFIT_SUHANE_31_JNR	: {SILVER}SUHANE 31{BLACK} Combine Coach (Brown)
-
-
-STR_REFIT_SUNI_40		: {SILVER}SUNI 40{BLACK} Luggage Van
-STR_REFIT_SUYU_44		: {SILVER}SUYU 44{BLACK} Mail Van
-STR_REFIT_WAKI_8000		: {SILVER}WAKI 8000{BLACK} Express Box Van
-STR_REFIT_SUNI_41		: {SILVER}SUNI 41{BLACK} Mail Van with Conductor's Room
-STR_REFIT_WASAFU_8000	: {SILVER}WASAFU 8000{BLACK} Box Van with Conductor's Room (Silver)
-STR_REFIT_WASAFU_BLUE	: {SILVER}WASAFU 8000{BLACK} Box Van with Conductor's Room (Blue)
 
 
 ################
