--- a/lang/english.lng
+++ b/lang/english.lng
@@ -39,7 +39,7 @@ STR_NAME_JNR_EF60	:EF60 (electric)
 STR_NAME_JNR_EF63	:EF63 (electric)
 STR_NAME_JNR_EF70	:EF70 (electric)
 STR_NAME_JNR_EF80	:EF80 (electric)
-STR_NAME_JNR_ED53	:ED19 / ED53 (electric)
+STR_NAME_JNR_ED53	:ED53 (electric)
 STR_NAME_JNR_ED62	:ED61 / ED62 (electric)
 STR_NAME_JNR_ED70	:ED70 (electric)
 STR_NAME_JNR_ED75	:ED75 / ED79 (electric)
