--- a/lang/english.lng
+++ b/lang/english.lng
@@ -178,18 +178,20 @@ STR_SUFFIX_INSPECTION			: Inspection Car
 #################
 #COLOUR SUFFIXES#
 #################
-STR_SUFFIX_BROWN			: (Brown)
-STR_SUFFIX_BROWN_BLUE		: (Brown/Blue)
-STR_SUFFIX_BROWN_RED		: (Brown/Red)
-STR_SUFFIX_BROWN_CREAM		: (Brown/Cream)
-STR_SUFFIX_BROWN_GREEN		: (Brown/Green)
-STR_SUFFIX_BLUE				: (Blue)
-STR_SUFFIX_BLUE_GREEN		: (Blue/Green)
-STR_SUFFIX_BLUE_WHITE		: (Blue/White)
-STR_SUFFIX_BLUE_YELLOW		: (Blue/Yellow)
+STR_SUFFIX_BLACK			:{CREAM}Black
+STR_SUFFIX_GREEN			:{CREAM}Green
+STR_SUFFIX_BROWN			:{CREAM}Brown
+STR_SUFFIX_BROWN_BLUE		:{CREAM}Brown/Blue
+STR_SUFFIX_BROWN_RED		:{CREAM}Brown/Red
+STR_SUFFIX_BROWN_CREAM		:{CREAM}Brown/Cream
+STR_SUFFIX_BROWN_GREEN		:{CREAM}Brown/Green
+STR_SUFFIX_BLUE				:{CREAM}Blue
+STR_SUFFIX_BLUE_GREEN		:{CREAM}Blue/Green
+STR_SUFFIX_BLUE_WHITE		:{CREAM}Blue/White
+STR_SUFFIX_BLUE_YELLOW		:{CREAM}Blue/Yellow
 
-STR_SUFFIX_RED				: (Red)
-STR_SUFFIX_CC				: {GREEN}(Company Coloured){BLACK}
+STR_SUFFIX_RED				:{CREAM}Red
+STR_SUFFIX_CC				:{CREAM}Company Coloured
 
 #########
 #SUHA 32#
@@ -339,9 +341,26 @@ STR_NAME_YO_1			:YO 1 Brake Van
 STR_NAME_YO_5000		:YO 5000 Brake Van
 STR_NAME_YO_8000		:YO 8000 Brake Van
 
+##################
+#COMPANY SUFFIXES#
+##################
+
+STR_SUFFIX_JGR			:{WHITE}JGR
+STR_SUFFIX_JNR			:{WHITE}JNR
+STR_SUFFIX_JRF			:{WHITE}JR Freight
+STR_SUFFIX_JRE			:{WHITE}JR East
+STR_SUFFIX_JRC			:{WHITE}JR Central
+STR_SUFFIX_JRW			:{WHITE}JR West
+STR_SUFFIX_JRK			:{WHITE}JR Kyushu
+STR_SUFFIX_JRH			:{WHITE}JR Hokkaido
 
 
+##################
+#SPEED   SUFFIXES#
+##################
 
+STR_SUFFIX_85			:{GOLD}(85 km/h)
+STR_SUFFIX_110			:{GOLD}(110 km/h)
 
 #####################
 #NEW MODULAR STRINGS#
@@ -478,7 +497,8 @@ STR_REFIT_KOSAKA		: {WHITE}Kosaka Railway{BLACK} Red/Grey
 STR_REFIT_KAMIOKA		: {WHITE}Kamioka Railway{BLACK} Brown/Black
 STR_REFIT_KASHIMA		: {WHITE}Kashima Railway{BLACK} Black/White
 
-
+STR_REFIT_ED17			: {SILVER}ED17{BLACK}
+STR_REFIT_ED50			: {SILVER}ED50{BLACK}
 
 STR_REFIT_ED61_CC		: {SILVER}ED61 {GREEN}{GREEN}Company Colour{BLACK}
 STR_REFIT_ED61_BROWN	: {SILVER}ED61 {WHITE}JNR {BLACK}Brown
