ED16 and DeKi addon

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -39,6 +39,7 @@ STR_NAME_JNR_EF60	:EF60 (electric)
 STR_NAME_JNR_EF63	:EF63 (electric)
 STR_NAME_JNR_EF70	:EF70 (electric)
 STR_NAME_JNR_EF80	:EF80 (electric)
+STR_NAME_JNR_ED16	:ED16 (electric)
 STR_NAME_JNR_ED53	:ED53 (electric)
 STR_NAME_JNR_ED62	:ED61 / ED62 (electric)
 STR_NAME_JNR_ED70	:ED70 (electric)
@@ -178,20 +179,21 @@ STR_SUFFIX_INSPECTION			: Inspection Car
 #################
 #COLOUR SUFFIXES#
 #################
-STR_SUFFIX_BLACK			:{CREAM}Black
-STR_SUFFIX_GREEN			:{CREAM}Green
-STR_SUFFIX_BROWN			:{CREAM}Brown
-STR_SUFFIX_BROWN_BLUE		:{CREAM}Brown/Blue
-STR_SUFFIX_BROWN_RED		:{CREAM}Brown/Red
-STR_SUFFIX_BROWN_CREAM		:{CREAM}Brown/Cream
-STR_SUFFIX_BROWN_GREEN		:{CREAM}Brown/Green
-STR_SUFFIX_BLUE				:{CREAM}Blue
-STR_SUFFIX_BLUE_GREEN		:{CREAM}Blue/Green
-STR_SUFFIX_BLUE_WHITE		:{CREAM}Blue/White
-STR_SUFFIX_BLUE_YELLOW		:{CREAM}Blue/Yellow
+STR_SUFFIX_BLACK			:{PURPLE}Black
+STR_SUFFIX_BLACK_YELLOW		:{PURPLE}Black/Yellow
+STR_SUFFIX_GREEN			:{PURPLE}Green
+STR_SUFFIX_BROWN			:{PURPLE}Brown
+STR_SUFFIX_BROWN_BLUE		:{PURPLE}Brown/Blue
+STR_SUFFIX_BROWN_RED		:{PURPLE}Brown/Red
+STR_SUFFIX_BROWN_CREAM		:{PURPLE}Brown/Cream
+STR_SUFFIX_BROWN_GREEN		:{PURPLE}Brown/Green
+STR_SUFFIX_BLUE				:{PURPLE}Blue
+STR_SUFFIX_BLUE_GREEN		:{PURPLE}Blue/Green
+STR_SUFFIX_BLUE_WHITE		:{PURPLE}Blue/White
+STR_SUFFIX_BLUE_YELLOW		:{PURPLE}Blue/Yellow
 
-STR_SUFFIX_RED				:{CREAM}Red
-STR_SUFFIX_CC				:{CREAM}Company Coloured
+STR_SUFFIX_RED				:{PURPLE}Red
+STR_SUFFIX_CC				:{GREEN}Company Coloured
 
 #########
 #SUHA 32#
@@ -353,6 +355,9 @@ STR_SUFFIX_JRC			:{WHITE}JR Central
 STR_SUFFIX_JRW			:{WHITE}JR West
 STR_SUFFIX_JRK			:{WHITE}JR Kyushu
 STR_SUFFIX_JRH			:{WHITE}JR Hokkaido
+
+STR_SUFFIX_AICHI		:{WHITE}Aichi Railway
+STR_SUFFIX_MEITETSU		:{WHITE}Meitetsu
 
 
 ##################
@@ -572,8 +577,7 @@ STR_REFIT_EH500_3	: EH500 Late Version "Kintaro Eco-Power"
 STR_REFIT_EH500_4	: EH500 Late Version, No Logo 
 
 
-STR_REFIT_MEITETSU_BLACK	: Meitetsu Original Black
-STR_REFIT_MEITETSU_BLUE		: Meitetsu Refurbished Blue
+STR_REFIT_DEKI_400	:{SILVER}DEKI 400
 
 
 STR_REFIT_WAKI_STRIPE	: Orange Stripe "Express Service"
